--- a/core/home/templates/home.html
+++ b/core/home/templates/home.html
@@ -4,4 +4,23 @@
 
 {% block content %}
   <h2 class="text-2xl text-center">This is the home page!</h2>
+  <hr class="m-5">
+  <div class="text-center">
+    {% if user.is_authenticated %}
+        <p>Hello, {{ user.username }}!</p>
+        <ul>
+            <li>
+                <form method="post" action="{% url 'logout' %}">
+                    {% csrf_token %}
+                    <button type="submit">Logout</button>
+                </form>
+            </li>
+            <li><a href="{% url 'password_change' %}">Change Password</a></li>
+        </ul>
+    {% else %}
+    <a href="{% url 'login' %}">Login</a> |
+    <a href="{% url 'signup' %}">Register</a> |
+    <a href="{% url 'password_reset' %}">Forgot Password?</a>
+    {% endif %}
+  </div>
 {% endblock %}
